@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.jsf.api.components.model.datalist.impl;
 
 import static de.cuioss.jsf.api.components.model.datalist.AddStatus.PERSISTED;
@@ -6,7 +21,6 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import de.cuioss.jsf.api.components.model.datalist.EditEvent;
 import de.cuioss.jsf.api.components.model.datalist.EditStatus;
@@ -16,17 +30,17 @@ import lombok.EqualsAndHashCode;
 import lombok.ToString;
 
 /**
- * Base class for implementing {@link EditableDataListModel}, should be the usual starting point for
- * concrete implementations.
+ * Base class for implementing {@link EditableDataListModel}, should be the
+ * usual starting point for concrete implementations.
  *
  * @author Oliver Wolff
- * @param <T> identifying the type of items to be created. Must be at least {@link Serializable} and
- *            implement {@link Object#hashCode()} and {@link Object#equals(Object)} correctly.
+ * @param <T> identifying the type of items to be created. Must be at least
+ *            {@link Serializable} and implement {@link Object#hashCode()} and
+ *            {@link Object#equals(Object)} correctly.
  */
 @ToString(doNotUseGetters = true)
 @EqualsAndHashCode(doNotUseGetters = true)
-public abstract class AbstractEditableDataListModel<T extends Serializable>
-        implements EditableDataListModel<T> {
+public abstract class AbstractEditableDataListModel<T extends Serializable> implements EditableDataListModel<T> {
 
     private static final long serialVersionUID = 2719782028119450821L;
     private List<ItemWrapper<T>> displayItems;
@@ -54,8 +68,8 @@ public abstract class AbstractEditableDataListModel<T extends Serializable>
     }
 
     /**
-     * Adds the item to the model while keeping the indexes intact.
-     * The status of the added item is {@linkplain EditStatus#ADDED}.
+     * Adds the item to the model while keeping the indexes intact. The status of
+     * the added item is {@linkplain EditStatus#ADDED}.
      *
      * @param item to be added to the model
      * @return added display item ({@link ItemWrapperImpl})
@@ -114,9 +128,7 @@ public abstract class AbstractEditableDataListModel<T extends Serializable>
     }
 
     protected void cancelAllEditItems() {
-        getDisplayItems().stream()
-                .filter(ItemWrapper::isEditMode)
-                .forEach(ItemWrapper::doCancel);
+        getDisplayItems().stream().filter(ItemWrapper::isEditMode).forEach(ItemWrapper::doCancel);
         removeNullItems();
     }
 
@@ -141,16 +153,13 @@ public abstract class AbstractEditableDataListModel<T extends Serializable>
     public List<T> getDeletedItems() {
         return getDisplayItems().stream()
                 .filter(item -> item.isMarkedForDelete() && PERSISTED.equals(item.getAddStatus()))
-                .map(ItemWrapper::getWrapped)
-                .collect(Collectors.toList());
+                .map(ItemWrapper::getWrapped).toList();
     }
 
     @Override
     public List<T> getResultItems() {
-        return getDisplayItems().stream()
-                .filter(item -> !item.isMarkedForDelete())
-                .map(ItemWrapper::getWrapped)
-                .collect(Collectors.toList());
+        return getDisplayItems().stream().filter(item -> !item.isMarkedForDelete()).map(ItemWrapper::getWrapped)
+                .toList();
     }
 
     @Override
