@@ -1,3 +1,18 @@
+/*
+ * Copyright 2023 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package de.cuioss.jsf.test.mock.application;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -7,7 +22,6 @@ import static org.junit.jupiter.api.Assertions.fail;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.faces.application.FacesMessage;
 import javax.faces.application.FacesMessage.Severity;
@@ -26,12 +40,12 @@ import lombok.Getter;
 import lombok.ToString;
 
 /**
- * Mock implementation of {@link MessageProducer} that will solely store the messages inside. It
- * provides access on the messages, see {@link #getComponentMessages()} and
- * {@link #getComponentMessages()} and an assert:
- * {@link #assertSingleGlobalMessageWithKeyPresent(String)}. The keys will not be resolved and can
- * therefore be queried directly.
- * It can be easily configured as bean by using {@link JsfTestConfiguration}
+ * Mock implementation of {@link MessageProducer} that will solely store the
+ * messages inside. It provides access on the messages, see
+ * {@link #getComponentMessages()} and {@link #getComponentMessages()} and an
+ * assert: {@link #assertSingleGlobalMessageWithKeyPresent(String)}. The keys
+ * will not be resolved and can therefore be queried directly. It can be easily
+ * configured as bean by using {@link JsfTestConfiguration}
  *
  * @author Matthias Walliczek
  */
@@ -61,58 +75,52 @@ public class MessageProducerMock extends MessageProducerImpl implements BeanConf
     /**
      * Asserts, that the given global message is present at least once.
      *
-     * @param severity of the message. required!
+     * @param severity   of the message. required!
      * @param messageKey of the message. required!
      */
     public void assertGlobalMessageWithKeyPresent(final FacesMessage.Severity severity, final String messageKey) {
         Preconditions.checkArgument(null != severity, "severity required");
         Preconditions.checkArgument(null != messageKey, "messageKey required");
         assertFalse(getGlobalMessagesForKey(severity, messageKey).isEmpty(),
-            "No global message found with severity=" + severity + " and messageKey=" + messageKey +
-                ". Available messages:\n" + createStringViewMessage(globalMessages));
+                "No global message found with severity=" + severity + " and messageKey=" + messageKey
+                        + ". Available messages:\n" + createStringViewMessage(globalMessages));
     }
 
     /**
      * Asserts, that the given component message is present at least once.
      *
-     * @param severity of the message. required!
+     * @param severity   of the message. required!
      * @param messageKey of the message. required!
      */
-    public void assertComponentMessageWithKeyPresent(final FacesMessage.Severity severity,
-                                                     final String messageKey) {
+    public void assertComponentMessageWithKeyPresent(final FacesMessage.Severity severity, final String messageKey) {
         Preconditions.checkArgument(null != severity, "severity required");
         Preconditions.checkArgument(null != messageKey, "messageKey required");
         assertFalse(getComponentMessagesForKey(severity, messageKey).isEmpty(),
-            "No component message found with severity=" + severity + " and messageKey=" + messageKey +
-                ". Available messages:\n" + createStringViewMessage(componentMessages));
+                "No component message found with severity=" + severity + " and messageKey=" + messageKey
+                        + ". Available messages:\n" + createStringViewMessage(componentMessages));
     }
 
     /**
-     * @param severity of the message. required!
+     * @param severity   of the message. required!
      * @param messageKey of the message. required!
      *
      * @return all global messages found with the given severity and message key
      */
-    public List<FacesMessage> getGlobalMessagesForKey(final FacesMessage.Severity severity,
-                                                      final String messageKey) {
-        return globalMessages.stream()
-            .filter(facesMessage -> severity.equals(facesMessage.getSeverity()))
-            .filter(facesMessage -> messageKey.equals(facesMessage.getSummary()))
-            .collect(Collectors.toList());
+    public List<FacesMessage> getGlobalMessagesForKey(final FacesMessage.Severity severity, final String messageKey) {
+        return globalMessages.stream().filter(facesMessage -> severity.equals(facesMessage.getSeverity()))
+                .filter(facesMessage -> messageKey.equals(facesMessage.getSummary())).toList();
     }
 
     /**
-     * @param severity of the message. required!
+     * @param severity   of the message. required!
      * @param messageKey of the message. required!
      *
      * @return all component messages found with the given severity and message key
      */
     public List<FacesMessage> getComponentMessagesForKey(final FacesMessage.Severity severity,
-                                                         final String messageKey) {
-        return componentMessages.stream()
-            .filter(facesMessage -> severity.equals(facesMessage.getSeverity()))
-            .filter(facesMessage -> messageKey.equals(facesMessage.getSummary()))
-            .collect(Collectors.toList());
+            final String messageKey) {
+        return componentMessages.stream().filter(facesMessage -> severity.equals(facesMessage.getSeverity()))
+                .filter(facesMessage -> messageKey.equals(facesMessage.getSummary())).toList();
     }
 
     /**
@@ -144,8 +152,7 @@ public class MessageProducerMock extends MessageProducerImpl implements BeanConf
      */
     public void assertThatNoMessageIsPresent() {
         var messagesAsString = createStringViewMessage(globalMessages);
-        assertEquals(0, globalMessages.size(),
-                "Expected no message present but found " + messagesAsString);
+        assertEquals(0, globalMessages.size(), "Expected no message present but found " + messagesAsString);
     }
 
     private String createStringViewMessage(List<FacesMessage> facesMessages) {
